<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="62dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/enterValuesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enterDebtorInfoLabel"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_name_label"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterValuesLabel" />

    <EditText
        android:id="@+id/lastNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name_label"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEdit" />

    <EditText
        android:id="@+id/debtEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/debt_label"
        android:inputType="none|numberSigned|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEdit" />

    <TextView
        android:id="@+id/enterFirstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="21dp"
        android:text="@string/enter_first_name_label"
        app:layout_constraintBottom_toTopOf="@+id/firstNameEdit"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/enterLastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="21dp"
        android:text="@string/enter_last_name_label"
        app:layout_constraintBottom_toTopOf="@+id/lastNameEdit"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/enterDebtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="21dp"
        android:text="@string/enter_debt_information"
        app:layout_constraintBottom_toTopOf="@+id/debtEdit"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="#4CAF50"
        android:contentDescription="@string/add_debtor_button"
        android:onClick="onAcceptClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtEdit"
        app:srcCompat="@drawable/ic_check_black_24dp" />

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/Red"
        android:contentDescription="@string/close_debtor_view_button"
        android:onClick="onCancelClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtEdit"
        app:srcCompat="@drawable/ic_close_black_24dp" />

    <Button
        android:id="@+id/toSimulationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FF9800"
        android:onClick="onSimulationClick"
        android:text="@string/simulateButtonLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>