<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/appTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listDebtorsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/debtors_list_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLabel" />

    <ImageButton
        android:id="@+id/addDebtorButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/addButton"
        android:foregroundTint="#E91E63"
        android:onClick="onAddDebtorClick"
        android:scaleType="centerCrop"
        android:tint="#FF9800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_circle_black_24dp" />

    <TextView
        android:id="@+id/totalDebtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/debtSumLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="62dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <ListView
        android:id="@+id/debtorsListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="8dp"
        android:longClickable="true"
        app:layout_constraintBottom_toTopOf="@+id/addDebtorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listDebtorsLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>